--- a/index.html
+++ b/index.html
@@ -2,351 +2,300 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
-  <title>One Block Mods</title>
-  <style>
-    @font-face {
-      font-family: 'PressStart2P';
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Minecraft Mods Selector</title>
+<style>
+  @font-face {
+    font-family: 'PressStart2P';
+  }
 
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      font-family: 'PressStart2P', sans-serif;
-      background: url('https://i.imgur.com/FvTthQi.jpg') no-repeat center center fixed;
-      background-size: cover;
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
-      touch-action: pan-y;
-      color: #0f0;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
+  html, body {
+    margin: 0; padding: 0;
+    height: 100%; width: 100%;
+    font-family: 'PressStart2P', monospace;
+    background: url('https://i.imgur.com/FvTthQi.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #0f0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+  }
 
-    ::-webkit-scrollbar {
-      width: 6px;
-    }
+  .wrapper {
+    max-width: 480px;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    user-select: none;
+  }
 
-    ::-webkit-scrollbar-track {
-      background: transparent;
-    }
+  h1 {
+    font-size: 16px;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 2px black;
+  }
 
-    ::-webkit-scrollbar-thumb {
-      background: rgba(255, 255, 255, 0.4);
-      border-radius: 3px;
-    }
+  .mod-list {
+    display: flex;
+    overflow-x: auto;
+    gap: 16px;
+    scroll-snap-type: x mandatory;
+    padding-bottom: 12px;
+  }
 
-    body {
-      display: block;
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch;
-    }
+  .mod-item {
+    scroll-snap-align: start;
+    background: rgba(0,0,0,0.6);
+    border: 2px solid #055705;
+    border-radius: 12px;
+    width: 120px;
+    flex-shrink: 0;
+    cursor: pointer;
+    padding: 12px 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: border-color 0.3s;
+  }
+  .mod-item:hover:not(.disabled) {
+    border-color: #0f0;
+  }
 
-    .wrapper {
-      width: 100%;
-      max-width: 480px;
-      margin: 0 auto;
-      padding: 20px;
-      box-sizing: border-box;
-      text-align: center;
-    }
+  .mod-item.disabled {
+    cursor: default;
+    opacity: 0.6;
+  }
 
-    .overlay {
-      display: block;
-      width: 100%;
-      text-align: center;
-    }
+  .mod-item input[type=checkbox] {
+    margin-bottom: 10px;
+    width: 22px; height: 22px;
+    cursor: pointer;
+    accent-color: #0f0;
+  }
 
-    h1 {
-      color: #0f0;
-      font-size: 14px;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px #000;
-      height: auto;
-      min-height: 100%;
-      box-sizing: border-box;
-    }
+  .mod-item img {
+    width: 80px;
+    height: 80px;
+    border-radius: 8px;
+    border: 2px solid #0f0;
+    pointer-events: none;
+    user-select: none;
+  }
 
-    .mod-list {
-      display: flex;
-      flex-direction: row;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      gap: 12px;
-      width: 100%;
-      padding-bottom: 10px;
-      -webkit-overflow-scrolling: touch;
-    }
+  .mod-item label {
+    color: #0f0;
+    font-size: 12px;
+    user-select: none;
+  }
 
-    .mod-item {
-      scroll-snap-align: start;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      gap: 6px;
-      min-width: 120px;
-      font-size: 12px;
-      color: white;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 16px 12px;
-      border: 2px solid #555;
-      border-radius: 8px;
-      box-sizing: border-box;
-      cursor: pointer;
-      user-select: none;
-      position: relative;
-    }
+  #selectHint, #installHint {
+    font-size: 11px;
+    color: #0f0;
+    margin-top: 8px;
+    text-shadow: 1px 1px 2px black;
+  }
 
-    .mod-item input[type="checkbox"] {
-      width: 24px;
-      height: 24px;
-      accent-color: #0f0;
-      cursor: pointer;
-    }
+  #installBtn {
+    margin-top: 20px;
+    font-family: 'PressStart2P', monospace;
+    font-size: 12px;
+    padding: 14px 0;
+    width: 100%;
+    max-width: 320px;
+    background-color: #007700;
+    border: 2px solid #003300;
+    border-radius: 8px;
+    color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+    user-select: none;
+    transition: background-color 0.3s;
+  }
+  #installBtn:disabled {
+    background-color: #444;
+    border-color: #222;
+    cursor: not-allowed;
+  }
 
-    .mod-item img {
-      width: 80px;
-      height: 80px;
-      pointer-events: none;
-      border-radius: 8px;
-      border: 2px solid #0f0;
-    }
+  #loading {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+  }
 
-    .mod-item label {
-      pointer-events: none;
-      font-size: 12px;
-    }
+  .bar {
+    width: 80%;
+    max-width: 320px;
+    height: 22px;
+    background: #000;
+    border: 2px solid #055705;
+    border-radius: 10px;
+    overflow: hidden;
+  }
 
-    .button {
-      display: inline-block;
-      margin: 20px auto;
-      font-family: 'PressStart2P', sans-serif;
-      font-size: 10px;
-      padding: 12px 24px;
-      background: #00aa00;
-      border: 2px solid #003300;
-      border-radius: 6px;
-      color: white;
-      cursor: pointer;
-      text-transform: uppercase;
-      text-align: center;
-      user-select: none;
-      width: 200px;
-      transition: background-color 0.3s ease;
-    }
+  .progress {
+    height: 100%;
+    width: 0;
+    background: #0f0;
+    transition: width 2s linear;
+  }
 
-    .button:disabled {
-      background: #444;
-      border-color: #222;
-      cursor: not-allowed;
-      font-family: 'PressStart2P', sans-serif;
-    }
+  #cta {
+    margin-top: 24px;
+    font-family: 'PressStart2P', monospace;
+    font-size: 12px;
+    padding: 14px 0;
+    width: 100%;
+    max-width: 320px;
+    background-color: #cc0000;
+    border: 2px solid #660000;
+    border-radius: 8px;
+    color: #fff;
+    cursor: pointer;
+    user-select: none;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s;
+    animation: pulse 1.5s infinite;
+  }
 
-    .bar {
-      width: 80%;
-      height: 20px;
-      background: #000;
-      border: 2px solid #555;
-      margin: 40px auto 0;
-      border-radius: 5px;
-      overflow: hidden;
-    }
+  #cta.visible {
+    opacity: 1;
+    pointer-events: auto;
+  }
 
-    .progress {
-      height: 100%;
-      width: 0;
-      background: #0c0;
-      transition: width 2s linear;
-    }
-
-    #loading {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 40px;
-      margin-bottom: 60px;
-      user-select: none;
-    }
-
-    #cta {
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.5s ease;
-      margin-top: 20px;
-      background: #ff0000;
-      border: 2px solid #660000;
-      font-family: 'PressStart2P', sans-serif;
-      font-size: 10px;
-      padding: 12px 24px;
-      cursor: pointer;
-      border-radius: 6px;
-      width: 200px;
-      user-select: none;
-    }
-
-    #cta.visible {
-      opacity: 1;
-      pointer-events: auto;
-      animation: pulse 1.2s infinite;
-      transform-origin: center;
-    }
-
-    @keyframes pulse {
-      0% {
-        transform: scale(1);
-      }
-
-      50% {
-        transform: scale(1.08);
-      }
-
-      100% {
-        transform: scale(1);
-      }
-    }
-
-    #selectHint, #installHint {
-      font-family: 'PressStart2P', sans-serif;
-      color: #0f0;
-      font-size: 10px;
-      margin: 12px 0 0;
-      text-shadow: 1px 1px 2px #000;
-      user-select: none;
-    }
-
-  </style>
+  @keyframes pulse {
+    0%, 100% { transform: scale(1); }
+    50% { transform: scale(1.1); }
+  }
+</style>
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="overlay" id="main">
-      <h1>Select Your Mods</h1>
-      <div class="mod-list" id="modList">
-
-        <div class="mod-item" data-id="m1">
-          <input type="checkbox" id="m1" />
-          <img src="https://i.imgur.com/s0aFJbI.png" alt="One Block" />
-          <label for="m1">One Block</label>
-        </div>
-
-        <div class="mod-item" data-id="m2">
-          <input type="checkbox" id="m2" />
-          <img src="https://i.imgur.com/59zqDZD.png" alt="Lucky Block" />
-          <label for="m2">Lucky Block</label>
-        </div>
-
-        <div class="mod-item" data-id="m3">
-          <input type="checkbox" id="m3" />
-          <img src="https://i.imgur.com/HLGQnx3.png" alt="SkyBlock" />
-          <label for="m3">SkyBlock</label>
-        </div>
-
-        <div class="mod-item" data-id="m4">
-          <input type="checkbox" id="m4" />
-          <img src="https://i.imgur.com/4LHKKb6.png" alt="Furniture Mod" />
-          <label for="m4">Furniture Mod</label>
-        </div>
-
-        <div class="mod-item" data-id="m5">
-          <input type="checkbox" id="m5" />
-          <img src="https://i.imgur.com/4J0lZ1S.png" alt="Biomes O' Plenty" />
-          <label for="m5">Biomes O' Plenty</label>
-        </div>
-
-        <div class="mod-item" data-id="m6">
-          <input type="checkbox" id="m6" />
-          <img src="https://i.imgur.com/6d1U60B.png" alt="Industrial Craft" />
-          <label for="m6">Industrial Craft</label>
-        </div>
-
-        <div class="mod-item" data-id="m7">
-          <input type="checkbox" id="m7" />
-          <img src="https://i.imgur.com/ZYXZDyv.png" alt="Tinkers' Construct" />
-          <label for="m7">Tinkers' Construct</label>
-        </div>
-
-        <div class="mod-item" data-id="m8">
-          <input type="checkbox" id="m8" />
-          <img src="https://i.imgur.com/1OZOfyK.png" alt="JourneyMap" />
-          <label for="m8">JourneyMap</label>
-        </div>
+  <div class="wrapper" id="mainScreen">
+    <h1>Select Your Mods</h1>
+    <div class="mod-list" id="modList">
+      <div class="mod-item" data-id="m1">
+        <input type="checkbox" id="m1" />
+        <img src="https://i.imgur.com/s0aFJbI.png" alt="One Block" />
+        <label for="m1">One Block</label>
       </div>
-      <div id="selectHint">Click on mods to select them</div>
-      <button class="button" id="installBtn" disabled>Install Selected Mods</button>
-    </div>
-
-    <div id="loading">
-      <div class="bar">
-        <div class="progress" id="progressBar"></div>
+      <div class="mod-item" data-id="m2">
+        <input type="checkbox" id="m2" />
+        <img src="https://i.imgur.com/59zqDZD.png" alt="Lucky Block" />
+        <label for="m2">Lucky Block</label>
       </div>
-      <button id="cta" onclick="if(window.mraid && mraid.open) {mraid.open('https://play.google.com/store/apps/details?id=com.game.mcpe.mods.oneblock')} else {window.open('https://play.google.com/store/apps/details?id=com.game.mcpe.mods.oneblock','_blank')}">Open in Minecraft</button>
+      <div class="mod-item" data-id="m3">
+        <input type="checkbox" id="m3" />
+        <img src="https://i.imgur.com/HLGQnx3.png" alt="SkyBlock" />
+        <label for="m3">SkyBlock</label>
+      </div>
+      <div class="mod-item" data-id="m4">
+        <input type="checkbox" id="m4" />
+        <img src="https://i.imgur.com/4LHKKb6.png" alt="Furniture Mod" />
+        <label for="m4">Furniture Mod</label>
+      </div>
+      <div class="mod-item" data-id="m5">
+        <input type="checkbox" id="m5" />
+        <img src="https://i.imgur.com/4J0lZ1S.png" alt="Biomes O' Plenty" />
+        <label for="m5">Biomes O' Plenty</label>
+      </div>
+      <div class="mod-item" data-id="m6">
+        <input type="checkbox" id="m6" />
+        <img src="https://i.imgur.com/6d1U60B.png" alt="Industrial Craft" />
+        <label for="m6">Industrial Craft</label>
+      </div>
+      <div class="mod-item" data-id="m7">
+        <input type="checkbox" id="m7" />
+        <img src="https://i.imgur.com/ZYXZDyv.png" alt="Tinkers' Construct" />
+        <label for="m7">Tinkers' Construct</label>
+      </div>
+      <div class="mod-item" data-id="m8">
+        <input type="checkbox" id="m8" />
+        <img src="https://i.imgur.com/1OZOfyK.png" alt="JourneyMap" />
+        <label for="m8">JourneyMap</label>
+      </div>
     </div>
+    <div id="selectHint">Click on mods to select them</div>
+    <button id="installBtn" disabled>Install Selected Mods</button>
   </div>
 
-  <script>
-    const modItems = document.querySelectorAll('.mod-item');
-    const checkboxes = document.querySelectorAll('input[type=checkbox]');
-    const installBtn = document.getElementById('installBtn');
-    const progressBar = document.getElementById('progressBar');
-    const loadingScreen = document.getElementById('loading');
-    const mainScreen = document.getElementById('main');
-    const openBtn = document.getElementById('cta');
-    const selectHint = document.getElementById('selectHint');
+  <div id="loading">
+    <div class="bar"><div class="progress" id="progressBar"></div></div>
+    <button id="cta">Open in Minecraft</button>
+  </div>
 
-    // Показуємо підказку на початку
-    selectHint.style.display = 'block';
+<script>
+  const checkboxes = document.querySelectorAll('.mod-item input[type=checkbox]');
+  const installBtn = document.getElementById('installBtn');
+  const progressBar = document.getElementById('progressBar');
+  const loading = document.getElementById('loading');
+  const mainScreen = document.getElementById('mainScreen');
+  const openBtn = document.getElementById('cta');
+  const selectHint = document.getElementById('selectHint');
 
-    modItems.forEach(item => {
-      const cb = item.querySelector('input[type=checkbox]');
-      item.addEventListener('click', (e) => {
-        if (e.target === cb) {
-          updateInstallButton();
-          return;
-        }
+  // Оновлення кнопки Інсталювати
+  function updateInstallBtn() {
+    const anyChecked = Array.from(checkboxes).some(cb => cb.checked);
+    installBtn.disabled = !anyChecked;
+  }
+
+  // Відслідковуємо вибір модів
+  checkboxes.forEach(cb => {
+    cb.addEventListener('change', () => {
+      updateInstallBtn();
+    });
+    // Клік по всьому блоку модів теж перемикає чекбокс
+    cb.closest('.mod-item').addEventListener('click', e => {
+      if (e.target !== cb) {
         if (!installBtn.disabled) {
           cb.checked = !cb.checked;
-          updateInstallButton();
+          updateInstallBtn();
           selectHint.style.display = 'none';
         }
-      });
+      }
     });
+  });
 
-    function updateInstallButton() {
-      const anyChecked = Array.from(checkboxes).some(cb => cb.checked);
-      installBtn.disabled = !anyChecked;
+  // Кнопка Інсталювати
+  installBtn.addEventListener('click', () => {
+    installBtn.disabled = true;
+    checkboxes.forEach(cb => cb.disabled = true);
+    selectHint.style.display = 'none';
+    mainScreen.style.display = 'none';
+    loading.style.display = 'flex';
+
+    progressBar.style.width = '0%';
+    openBtn.classList.remove('visible');
+    openBtn.style.opacity = 0;
+    openBtn.style.pointerEvents = 'none';
+
+    // Прогресбар анімується 2 секунди до 100%
+    setTimeout(() => {
+      progressBar.style.width = '100%';
+    }, 100);
+
+    // Показуємо кнопку після завершення прогресу
+    setTimeout(() => {
+      openBtn.classList.add('visible');
+      openBtn.style.opacity = 1;
+      openBtn.style.pointerEvents = 'auto';
+    }, 2100);
+  });
+
+  // Обробник для кнопки Open in Minecraft з підтримкою mraid
+  openBtn.addEventListener('click', () => {
+    const url = 'https://play.google.com/store/apps/details?id=com.game.mcpe.mods.oneblock';
+    if(window.mraid && mraid.open) {
+      mraid.open(url);
+    } else {
+      window.open(url, '_blank');
     }
+  });
+</script>
 
-    checkboxes.forEach(cb => {
-      cb.addEventListener('change', () => {
-        updateInstallButton();
-      });
-    });
-
-    installBtn.addEventListener('click', () => {
-      installBtn.disabled = true;
-      checkboxes.forEach(cb => cb.disabled = true);
-      selectHint.style.display = 'none';
-      mainScreen.style.display = 'none';
-      loadingScreen.style.display = 'flex';
-      progressBar.style.width = '0%';
-      openBtn.classList.remove('visible');
-
-      // Анімація прогресбару
-      setTimeout(() => {
-        progressBar.style.width = '100%';
-      }, 100);
-
-      // Показ кнопки після завершення прогресу
-      setTimeout(() => {
-        openBtn.classList.add('visible');
-      }, 2100);
-    });
-  </script>
 </body>
-
 </html>
