--- a/index.html
+++ b/index.html
@@ -2,300 +2,362 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Minecraft Mods Selector</title>
-<style>
-  @font-face {
-    font-family: 'PressStart2P';
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Minecraft Mods Selector</title>
+  <style>
+    @font-face {
+      font-family: 'PressStart2P';
+    }
 
-  html, body {
-    margin: 0; padding: 0;
-    height: 100%; width: 100%;
-    font-family: 'PressStart2P', monospace;
-    background: url('https://i.imgur.com/FvTthQi.jpg') no-repeat center center fixed;
-    background-size: cover;
-    color: #0f0;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    overflow-x: hidden;
-  }
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      font-family: 'PressStart2P', monospace;
+      background: url('images/background.png') no-repeat center center fixed;
+      background-size: cover;
+      color: #0f0;
+      overflow-x: hidden;
+      user-select: none;
+    }
 
-  .wrapper {
-    max-width: 480px;
-    margin: 0 auto;
-    padding: 20px;
-    box-sizing: border-box;
-    text-align: center;
-    user-select: none;
-  }
+    .wrapper {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 30px 20px 20px;
+      box-sizing: border-box;
+      text-align: center;
+    }
 
-  h1 {
-    font-size: 16px;
-    margin-bottom: 20px;
-    text-shadow: 1px 1px 2px black;
-  }
+    h1 {
+      font-size: 18px;
+      margin-bottom: 20px;
+      text-shadow: 1px 1px 2px black;
+    }
 
-  .mod-list {
-    display: flex;
-    overflow-x: auto;
-    gap: 16px;
-    scroll-snap-type: x mandatory;
-    padding-bottom: 12px;
-  }
+    .carousel-container {
+      position: relative;
+      user-select: none;
+    }
 
-  .mod-item {
-    scroll-snap-align: start;
-    background: rgba(0,0,0,0.6);
-    border: 2px solid #055705;
-    border-radius: 12px;
-    width: 120px;
-    flex-shrink: 0;
-    cursor: pointer;
-    padding: 12px 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: border-color 0.3s;
-  }
-  .mod-item:hover:not(.disabled) {
-    border-color: #0f0;
-  }
+    .mod-list {
+      display: flex;
+      overflow: hidden;
+      gap: 20px;
+      scroll-snap-type: x mandatory;
+      scroll-behavior: smooth;
+      padding-bottom: 12px;
+    }
 
-  .mod-item.disabled {
-    cursor: default;
-    opacity: 0.6;
-  }
+    .mod-item {
+      scroll-snap-align: start;
+      background: rgba(0, 0, 0, 0.6);
+      border: 2px solid #055705;
+      border-radius: 12px;
+      width: 140px;
+      flex-shrink: 0;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 16px 12px 8px;
+      transition: border-color 0.3s;
+      user-select: none;
+    }
 
-  .mod-item input[type=checkbox] {
-    margin-bottom: 10px;
-    width: 22px; height: 22px;
-    cursor: pointer;
-    accent-color: #0f0;
-  }
+    .mod-item:hover:not(.disabled) {
+      border-color: #0f0;
+    }
 
-  .mod-item img {
-    width: 80px;
-    height: 80px;
-    border-radius: 8px;
-    border: 2px solid #0f0;
-    pointer-events: none;
-    user-select: none;
-  }
+    .mod-item.disabled {
+      cursor: default;
+      opacity: 0.6;
+    }
 
-  .mod-item label {
-    color: #0f0;
-    font-size: 12px;
-    user-select: none;
-  }
+    .mod-item img {
+      width: 100px;
+      height: 100px;
+      border-radius: 8px;
+      border: 2px solid #0f0;
+      pointer-events: none;
+    }
 
-  #selectHint, #installHint {
-    font-size: 11px;
-    color: #0f0;
-    margin-top: 8px;
-    text-shadow: 1px 1px 2px black;
-  }
+    .mod-checkbox {
+      margin-top: 8px;
+      width: 22px;
+      height: 22px;
+      accent-color: #0f0;
+      cursor: pointer;
+    }
 
-  #installBtn {
-    margin-top: 20px;
-    font-family: 'PressStart2P', monospace;
-    font-size: 12px;
-    padding: 14px 0;
-    width: 100%;
-    max-width: 320px;
-    background-color: #007700;
-    border: 2px solid #003300;
-    border-radius: 8px;
-    color: #fff;
-    cursor: pointer;
-    text-transform: uppercase;
-    user-select: none;
-    transition: background-color 0.3s;
-  }
-  #installBtn:disabled {
-    background-color: #444;
-    border-color: #222;
-    cursor: not-allowed;
-  }
+    .scroll-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(0, 0, 0, 0.6);
+      border: 2px solid #0f0;
+      color: #0f0;
+      font-family: 'PressStart2P', monospace;
+      font-size: 18px;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      user-select: none;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-  #loading {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 40px;
-  }
+    .scroll-btn:disabled {
+      opacity: 0.3;
+      cursor: default;
+    }
 
-  .bar {
-    width: 80%;
-    max-width: 320px;
-    height: 22px;
-    background: #000;
-    border: 2px solid #055705;
-    border-radius: 10px;
-    overflow: hidden;
-  }
+    #scrollLeft {
+      left: -50px;
+    }
 
-  .progress {
-    height: 100%;
-    width: 0;
-    background: #0f0;
-    transition: width 2s linear;
-  }
+    #scrollRight {
+      right: -50px;
+    }
 
-  #cta {
-    margin-top: 24px;
-    font-family: 'PressStart2P', monospace;
-    font-size: 12px;
-    padding: 14px 0;
-    width: 100%;
-    max-width: 320px;
-    background-color: #cc0000;
-    border: 2px solid #660000;
-    border-radius: 8px;
-    color: #fff;
-    cursor: pointer;
-    user-select: none;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.5s;
-    animation: pulse 1.5s infinite;
-  }
+    #selectHint {
+      font-size: 14px;
+      color: #0f0;
+      margin-top: 10px;
+      text-shadow: 1px 1px 2px black;
+      animation: pulse 1.5s infinite;
+      cursor: default;
+      user-select: none;
+    }
 
-  #cta.visible {
-    opacity: 1;
-    pointer-events: auto;
-  }
+    #installBtn {
+      margin-top: 20px;
+      font-family: 'PressStart2P', monospace;
+      font-size: 14px;
+      padding: 16px 0;
+      width: 100%;
+      max-width: 320px;
+      background-color: #007700;
+      border: 2px solid #003300;
+      border-radius: 8px;
+      color: #fff;
+      cursor: pointer;
+      text-transform: uppercase;
+      user-select: none;
+      transition: background-color 0.3s;
+    }
 
-  @keyframes pulse {
-    0%, 100% { transform: scale(1); }
-    50% { transform: scale(1.1); }
-  }
-</style>
+    #installBtn:disabled {
+      background-color: #444;
+      border-color: #222;
+      cursor: not-allowed;
+    }
+
+    #loading {
+      margin-top: 20px;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .bar {
+      width: 100%;
+      max-width: 500px;
+      height: 24px;
+      background: #000;
+      border: 2px solid #055705;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .progress {
+      height: 100%;
+      width: 0;
+      background: #0f0;
+      transition: width 2s linear;
+    }
+
+    #cta {
+      margin-top: 20px;
+      font-family: 'PressStart2P', monospace;
+      font-size: 14px;
+      padding: 14px 0;
+      width: 100%;
+      max-width: 320px;
+      background-color: #cc0000;
+      border: 2px solid #660000;
+      border-radius: 8px;
+      color: #fff;
+      cursor: pointer;
+      user-select: none;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.5s;
+      animation: pulse 1.5s infinite;
+    }
+
+    #cta.visible {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    @keyframes pulse {
+
+      0%,
+      100% {
+        transform: scale(1);
+      }
+
+      50% {
+        transform: scale(1.1);
+      }
+    }
+  </style>
 </head>
 
 <body>
   <div class="wrapper" id="mainScreen">
     <h1>Select Your Mods</h1>
-    <div class="mod-list" id="modList">
-      <div class="mod-item" data-id="m1">
-        <input type="checkbox" id="m1" />
-        <img src="https://i.imgur.com/s0aFJbI.png" alt="One Block" />
-        <label for="m1">One Block</label>
+
+    <div class="carousel-container">
+      <button id="scrollLeft" class="scroll-btn" aria-label="Scroll Left">&lt;</button>
+      <div class="mod-list" id="modList">
+        <div class="mod-item" data-id="m1" tabindex="0">
+          <img src="images/oneblock.png" alt="One Block" />
+          <input type="checkbox" class="mod-checkbox" id="m1" />
+          <label for="m1">One Block</label>
+        </div>
+        <div class="mod-item" data-id="m2" tabindex="0">
+          <img src="images/oneblock.png" alt="Lucky Block" />
+          <input type="checkbox" class="mod-checkbox" id="m2" />
+          <label for="m2">Lucky Block</label>
+        </div>
+        <div class="mod-item" data-id="m3" tabindex="0">
+          <img src="images/oneblock.png" alt="SkyBlock" />
+          <input type="checkbox" class="mod-checkbox" id="m3" />
+          <label for="m3">SkyBlock</label>
+        </div>
+        <div class="mod-item" data-id="m4" tabindex="0">
+          <img src="images/oneblock.png" alt="Furniture Mod" />
+          <input type="checkbox" class="mod-checkbox" id="m4" />
+          <label for="m4">Furniture Mod</label>
+        </div>
+        <div class="mod-item" data-id="m5" tabindex="0">
+          <img src="images/oneblock.png" alt="Biomes O' Plenty" />
+          <input type="checkbox" class="mod-checkbox" id="m5" />
+          <label for="m5">Biomes O' Plenty</label>
+        </div>
+        <div class="mod-item" data-id="m6" tabindex="0">
+          <img src="images/oneblock.png" alt="Better Nether" />
+          <input type="checkbox" class="mod-checkbox" id="m6" />
+          <label for="m6">Better Nether</label>
+        </div>
+        <div class="mod-item" data-id="m7" tabindex="0">
+          <img src="images/oneblock.png" alt="JourneyMap" />
+          <input type="checkbox" class="mod-checkbox" id="m7" />
+          <label for="m7">JourneyMap</label>
+        </div>
+        <div class="mod-item" data-id="m8" tabindex="0">
+          <img src="images/oneblock.png" alt="Tinkers' Construct" />
+          <input type="checkbox" class="mod-checkbox" id="m8" />
+          <label for="m8">Tinkers' Construct</label>
+        </div>
       </div>
-      <div class="mod-item" data-id="m2">
-        <input type="checkbox" id="m2" />
-        <img src="https://i.imgur.com/59zqDZD.png" alt="Lucky Block" />
-        <label for="m2">Lucky Block</label>
-      </div>
-      <div class="mod-item" data-id="m3">
-        <input type="checkbox" id="m3" />
-        <img src="https://i.imgur.com/HLGQnx3.png" alt="SkyBlock" />
-        <label for="m3">SkyBlock</label>
-      </div>
-      <div class="mod-item" data-id="m4">
-        <input type="checkbox" id="m4" />
-        <img src="https://i.imgur.com/4LHKKb6.png" alt="Furniture Mod" />
-        <label for="m4">Furniture Mod</label>
-      </div>
-      <div class="mod-item" data-id="m5">
-        <input type="checkbox" id="m5" />
-        <img src="https://i.imgur.com/4J0lZ1S.png" alt="Biomes O' Plenty" />
-        <label for="m5">Biomes O' Plenty</label>
-      </div>
-      <div class="mod-item" data-id="m6">
-        <input type="checkbox" id="m6" />
-        <img src="https://i.imgur.com/6d1U60B.png" alt="Industrial Craft" />
-        <label for="m6">Industrial Craft</label>
-      </div>
-      <div class="mod-item" data-id="m7">
-        <input type="checkbox" id="m7" />
-        <img src="https://i.imgur.com/ZYXZDyv.png" alt="Tinkers' Construct" />
-        <label for="m7">Tinkers' Construct</label>
-      </div>
-      <div class="mod-item" data-id="m8">
-        <input type="checkbox" id="m8" />
-        <img src="https://i.imgur.com/1OZOfyK.png" alt="JourneyMap" />
-        <label for="m8">JourneyMap</label>
-      </div>
+      <button id="scrollRight" class="scroll-btn" aria-label="Scroll Right">&gt;</button>
     </div>
+
     <div id="selectHint">Click on mods to select them</div>
     <button id="installBtn" disabled>Install Selected Mods</button>
+
+    <div id="loading">
+      <div class="bar">
+        <div class="progress" id="progressBar"></div>
+      </div>
+      <button id="cta">Open in Minecraft</button>
+    </div>
   </div>
 
-  <div id="loading">
-    <div class="bar"><div class="progress" id="progressBar"></div></div>
-    <button id="cta">Open in Minecraft</button>
-  </div>
+  <script>
+    const modList = document.getElementById('modList');
+    const checkboxes = document.querySelectorAll('.mod-checkbox');
+    const installBtn = document.getElementById('installBtn');
+    const progressBar = document.getElementById('progressBar');
+    const cta = document.getElementById('cta');
+    const loading = document.getElementById('loading');
+    const selectHint = document.getElementById('selectHint');
+    const scrollLeft = document.getElementById('scrollLeft');
+    const scrollRight = document.getElementById('scrollRight');
 
-<script>
-  const checkboxes = document.querySelectorAll('.mod-item input[type=checkbox]');
-  const installBtn = document.getElementById('installBtn');
-  const progressBar = document.getElementById('progressBar');
-  const loading = document.getElementById('loading');
-  const mainScreen = document.getElementById('mainScreen');
-  const openBtn = document.getElementById('cta');
-  const selectHint = document.getElementById('selectHint');
+    function updateInstallBtn() {
+      const anyChecked = Array.from(checkboxes).some(cb => cb.checked);
+      installBtn.disabled = !anyChecked;
+    }
 
-  // Оновлення кнопки Інсталювати
-  function updateInstallBtn() {
-    const anyChecked = Array.from(checkboxes).some(cb => cb.checked);
-    installBtn.disabled = !anyChecked;
-  }
+    function stopHintAnimation() {
+      selectHint.style.animation = 'none';
+      selectHint.style.opacity = '0';
+      setTimeout(() => {
+        selectHint.style.display = 'none';
+      }, 500);
+    }
 
-  // Відслідковуємо вибір модів
-  checkboxes.forEach(cb => {
-    cb.addEventListener('change', () => {
-      updateInstallBtn();
-    });
-    // Клік по всьому блоку модів теж перемикає чекбокс
-    cb.closest('.mod-item').addEventListener('click', e => {
-      if (e.target !== cb) {
-        if (!installBtn.disabled) {
+    checkboxes.forEach(cb => {
+      const modItem = cb.closest('.mod-item');
+
+      modItem.addEventListener('click', e => {
+        if (e.target !== cb && !cb.disabled) {
           cb.checked = !cb.checked;
           updateInstallBtn();
           selectHint.style.display = 'none';
         }
+      });
+
+      cb.addEventListener('change', () => {
+        updateInstallBtn();
+      });
+    });
+
+
+    scrollLeft.addEventListener('click', () => {
+      modList.scrollBy({ left: -160, behavior: 'smooth' });
+    });
+
+    scrollRight.addEventListener('click', () => {
+      modList.scrollBy({ left: 160, behavior: 'smooth' });
+    });
+
+    installBtn.addEventListener('click', () => {
+      installBtn.disabled = true;
+      checkboxes.forEach(cb => cb.disabled = true);
+      selectHint.style.display = 'none';
+
+      loading.style.display = 'flex';
+      progressBar.style.width = '0%';
+      cta.classList.remove('visible');
+
+      setTimeout(() => {
+        progressBar.style.width = '100%';
+      }, 100);
+
+      setTimeout(() => {
+        cta.classList.add('visible');
+      }, 2100);
+    });
+
+    cta.addEventListener('click', () => {
+      const url = 'https://play.google.com/store/apps/details?id=com.game.mcpe.mods.oneblock';
+      if (window.mraid && mraid.open) {
+        mraid.open(url);
+      } else {
+        window.open(url, '_blank');
       }
     });
-  });
-
-  // Кнопка Інсталювати
-  installBtn.addEventListener('click', () => {
-    installBtn.disabled = true;
-    checkboxes.forEach(cb => cb.disabled = true);
-    selectHint.style.display = 'none';
-    mainScreen.style.display = 'none';
-    loading.style.display = 'flex';
-
-    progressBar.style.width = '0%';
-    openBtn.classList.remove('visible');
-    openBtn.style.opacity = 0;
-    openBtn.style.pointerEvents = 'none';
-
-    // Прогресбар анімується 2 секунди до 100%
-    setTimeout(() => {
-      progressBar.style.width = '100%';
-    }, 100);
-
-    // Показуємо кнопку після завершення прогресу
-    setTimeout(() => {
-      openBtn.classList.add('visible');
-      openBtn.style.opacity = 1;
-      openBtn.style.pointerEvents = 'auto';
-    }, 2100);
-  });
-
-  // Обробник для кнопки Open in Minecraft з підтримкою mraid
-  openBtn.addEventListener('click', () => {
-    const url = 'https://play.google.com/store/apps/details?id=com.game.mcpe.mods.oneblock';
-    if(window.mraid && mraid.open) {
-      mraid.open(url);
-    } else {
-      window.open(url, '_blank');
-    }
-  });
-</script>
-
+  </script>
 </body>
+
 </html>
